testing tonika bundles

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
 .DS_Store
-/.idea/.gitignore
-/.idea/modules.xml
-/.idea/piano.iml
-/.idea/vcs.xml
-/.idea/inspectionProfiles/Project_Default.xml
-/.idea/chord-selector.iml
+/.idea
